# esnacc-ng

./: .gitignore  .travis.yml  AUTHORS  CONDUCT.md  CONTRIBUTING.md  COPYING.epl  COPYING.logo  FAQ.md  INSTALL.md  Makefile.am  NEWS  README.md  TODO  TODO.md  acconfig.h  aclocal.m4  appveyor.yml  buildall.dsp  buildall.vcproj  buildall.vcproj7  buildall_vc71.vcproj  changelog  cmasn.def  config.h.in  config_Used.h  config_win32.h  configure  configure.ac  configure.in  licenseq.txt  makefile  makehead.in  maketail  policy.h  readme.txt  snacc.h  snacc.h.in  snacc_builds.dsw  snacc_builds.sln  snacc_builds.sln7  (+8 more)
.github/: copilot-instructions.md
asn1specs/: .gitignore  any.asn1  asn-useful.asn1  asn-usefulVDA.asn1  asn1module.asn1  authenticationframework.asn1  certificateextensions.asn1  err-test.asn1  ex1.asn1  informationframework.asn1  oraddress.asn1  p-rec.asn1  pkcs8.asn1  rfc1155-smi.asn1  rfc1157-snmp.asn1  rfc1213-mib2.asn1  selectedattributetypes.asn1  snaccrose.asn  tbl.asn1  upperbounds.asn1  usefuldefinitions.asn1
c++-examples/: makefile  snacctest.dsp  snacctest.vcproj  snacctest.vcproj7  snacctest_vc71.vcproj
c++-examples/constraints_test/: constraintTest.asn1  constraintTest_main.cpp  constraints_test.cpp  constraints_test.dsp  constraints_test.vcproj  makefile  perTest.asn1
c++-examples/src/: asnutil.cpp  gfsi.cpp  makefile  readme.txt  testbuf.cpp  vdatest.cpp  vdatest_asn.asn1  vdatest_asn2.asn1
c++-lib/: makefile
c++-lib/cppasn1/: cppasn1.dsp  cppasn1.vcproj  cppasn1.vcproj7  cppasn1_vc71.vcproj  stdafx.cpp
c++-lib/cppasn1_static/: cppasn1_static.vcproj  cppasn1_static.vcproj7  cppasn1_static_vc71.vcproj
c++-lib/inc/: asn-buf.h  asn-chartraits.h  asn-config.h  asn-incl.h  asn-listset.h  init.h  meta.h  snaccdll.h  snaccexcept.h  tcl-if.h
c++-lib/src/: asn-PERGeneral.cpp  asn-RelativeOid.cpp  asn-any.cpp  asn-bits.cpp  asn-bool.cpp  asn-buf.cpp  asn-bufbits.cpp  asn-extension.cpp  asn-fileseg.cpp  asn-int.cpp  asn-len.cpp  asn-null.cpp  asn-octs.cpp  asn-real.cpp  asn-rvsbuf.cpp  asn-stringtype.cpp  asn-tag.cpp  asn-type.cpp  asn-usefultypes.cpp  hash.cpp  meta.cpp  snaccdll.cpp  snaccexcept.cpp  tkAppInit.c
c-examples/: .gitignore  automake.mk  makefile
c-examples/any/: any.asn1  any.c  any.dsw  any.h  example.c  genber.c  makefile  readme
c-examples/simple/: example.c  expbuf-ex.c  genber.c  good-pr.ber  makefile  minbuf-ex.c  readme  sbuf-ex.c
c-examples/snmp/: makefile  readme
c-examples/test-lib/: makefile  readme  test-lib.c
c-examples/vdatestC/: gfsi.c  gfsi.h  makefile  rfc1155-smi.asn1  rfc1157-snmp.asn1  snmp.c  vdatestC.c  vdatestC.dsp  vdatestC.vcproj  vdatestC.vcproj7  vdatestC_asn.asn1  vdatestC_vc71.vcproj  vdatest_asn2C.asn1
c-lib/: .gitignore  automake.mk  libesnacc.pc.in  makefile  readme
c-lib/boot/: tbl.c  tbl.h
c-lib/ebuf_lib/: casn1_vc71.vcproj  ebuf_lib.dsp  ebuf_lib.vcproj  ebuf_lib.vcproj7  snaccc.def
c-lib/ebuf_lib_static/: casn1_static_vc71.vcproj  ebuf_lib_static.dsp  ebuf_lib_static.vcproj  ebuf_lib_static.vcproj7
c-lib/inc/: asn-BMPString.h  asn-IA5String.h  asn-NumericString.h  asn-PrintableStr.h  asn-TeletexString.h  asn-UTF8String.h  asn-UniversalString.h  asn-VisibleString.h  asn-any.h  asn-bits.h  asn-bool.h  asn-config.h  asn-der.h  asn-enum.h  asn-incl.h  asn-int.h  asn-len.h  asn-list.h  asn-null.h  asn-octs.h  asn-oid.h  asn-real.h  asn-relative-oid.h  asn-tag.h  asn-useful.h  exp-buf.h  gen-buf.h  hash.h  junk.h  mem.h  min-buf.h  nibble-alloc.h  print.h  sbuf.h  snaccCder.h  str-stk.h  tbl-dbg.h  tbl-dec.h  tbl-enc.h  tbl-free.h  (+5 more)
c-lib/src/: asn-BMPString.c  asn-IA5String.c  asn-NumericString.c  asn-PrintableStr.c  asn-TeletexString.c  asn-UTF8String.c  asn-UniversalString.c  asn-VisibleString.c  asn-any.c  asn-bits.c  asn-bool.c  asn-der.c  asn-enum.c  asn-int.c  asn-len.c  asn-list.c  asn-null.c  asn-octs.c  asn-oid.c  asn-real.c  asn-relative-oid.c  asn-tag.c  asn-useful.c  asn1init.c  exp-buf.c  hash.c  mem.c  min-buf.c  nibble-alloc.c  print.c  sbuf.c  str-stk.c  tbl-dbg.c  tbl-dec.c  tbl-enc.c  tbl-free.c  tbl-gen.c  tbl-print.c  tbl-util.c
compiler/: .gitignore  automake.mk  bison.simple  compiler.dsp  compiler.vcproj  compiler.vcproj7  compiler_vc71.vcproj  do-macros.h  esnacc.xml  esnacc.xml.in  makefile  readme
compiler/back-ends/: cond.c  str-util.c  str-util.h  tag-util.c  tag-util.h
compiler/core/: asn1module.h  define.c  define.h  dependency.c  do-macros.c  do-macros.h  enc-rules.c  enc-rules.h  err-chk.c  exports.c  exports.h  gen-tbls.c  gfsi.c  lex-asn1.c  lex-asn1.l  lex-stuff.h  lib-types.c  lib-types.h  link-types.c  link-values.c  mem.c  mem.h  meta.c  meta.h  normalize.c  oid.c  parse-asn1.c  parse-asn1.h  parse-asn1.y  print.c  print.h  recursive.c  snacc-util.c  snacc-util.h  snacc.c  tbl.c  tbl.cOK  tbl.hOK  val-parser.c  y.tab.y
cxx-examples/: .gitignore  automake.mk
cxx-examples/constraints_test/: ReadMe.txt  constraintTest_mainRWC.cpp  new-types.asn1  perTestSet.asn1
cxx-examples/snmpv1_tests/: readme.txt
cxx-examples/src/: asnutil.h  automatic.cpp  autotags.asn1  bitstest.cpp  gfsi.cpp  inttest.cpp  main.cpp  per_tests.cpp  rfc1155-smi.asn1  rfc1157-snmp.asn1  snmp.cpp  testbuf.cpp  testsetsorting.cpp  vda_threads.cpp  vda_threads.h  vdatest.cpp  vdatest_asn.cpp  vdatest_asn2.cpp
cxx-lib/: .gitignore  asn-useful.asn1  automake.mk  libesnaccxx.pc.in  libesnaccxxrose.pc.in  readme
cxx-lib/cppasn1/: cppasn1.vcproj.vspscc  (+1 more)
debian/: .gitignore  automake.mk  changelog  control  docs  esnacc.install  libesnacc-dev.dirs  libesnacc-dev.install  libesnacc180.dirs  libesnacc180.install  rules
doc/: PERCompilerRequirementsMatrix.doc  developer-guide-sample-app.md  developer-guide.md
m4/: ax_code_coverage.m4  warnings.m4  windows.m4  xsltproc.m4
py-lib/: automake.mk
redhat/: .gitignore  automake.mk  esnacc.spec.in
tbl-example/: example.c  makefile  readme
tbl-tools/: makefile
tcl-asn/: asnwish.c  makefile  tclasn.c
tcl-example/: edex0.asn1  edex1.asn1  makefile
tcl-lib/: help.tcl  makefile  selbox.tcl  snacced.tcl  tkuti.tcl
(+102 files in other folders)
